--- a/config/locales/models/models_ja.yml
+++ b/config/locales/models/models_ja.yml
@@ -3,6 +3,7 @@ ja:
     models:
       user: ユーザー
       attendance: 勤怠
+      base: 拠点
     attributes:
         user:
           id: ID
@@ -11,6 +12,12 @@ ja:
           department: 所属
           basic_time: 基本時間
           work_time: 勤務時間
+          affiliation: 所属 
+          employee_number: 社員番号 
+          uid: カードID 
+          basic_work_time: 基本勤務時間 
+          designated_work_start_time: 指定勤務開始時間
+          designated_work_end_time: 指定勤務終了時間
           password: パスワード
           password_confirmation: パスワード再入力
           created_at: 作成日
@@ -21,3 +28,11 @@ ja:
           finished_at: 退勤時間
           note: 備考
           user: ユーザーID
+          scheduled_end_time: 終了予定時間
+          next_day: 翌日
+          business_process: 業務処理内容
+          confirmation: 指示者確認㊞
+        base:
+          name: 拠点名
+          kind: 拠点種類
+          number: 拠点番号
